--- a/Caddyfile
+++ b/Caddyfile
@@ -4,8 +4,9 @@
 
 :8081 {
 	handle /api/* {
-		mirror 192.168.3.61:8088
-		reverse_proxy 192.168.3.61:8080
+		mirror https://testzhaopin.shanzlg.com
+		mirror 192.168.1.188:8088
+		reverse_proxy 192.168.1.188:8080
 	}
 	reverse_proxy 192.168.3.61:8080
 }
